--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "tailwind-t01",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
+    "start": "index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
@@ -12,5 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.4"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
